--- a/main.html
+++ b/main.html
@@ -7,9 +7,16 @@
 </head>
 
 <body>
+	<div class="box">
+		<div class="text">
+			<p>This is a demo of box model try to replicate this box model in Html and Css and try to pass all the test
+				cases.</p>
+		</div>
+	</div>
+
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<script type="text/javascript" src="./script.js">
+	</script>
 
 </body>
 
